# fastapi-energo

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg
src/alembic/migrations/: env.py
src/alembic/migrations/versions/: 040b50465935_first.py
src/fastapi_energo/: main.py  settings.py  tables.py
src/fastapi_energo/api/: __init__.py  anagram.py  devices.py
src/tests/: test_fastapi_energo.py
